# mf1_logger

./: CMakeLists.txt  README.md  decorator.cpp  decorator.h  log.cpp  log.h  log_manager.cpp  log_manager.h  main.cpp
logger_bin/: CMakeLists.txt
logger_bin/src/: main.cpp
logger_lib/: CMakeLists.txt
logger_lib/src/: log.cpp
